--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       alert ("Bienvenido a nuestra pagina web ");
      function Cars()
      {
-      var condicion = prompt ("øTe gustaria ver la pelicula? (si/no) 1/2")
+      var condicion = prompt ("¬øTe gustaria ver la pelicula? (si/no) 1/2")
       var Cars;
       Cars = condicion * condicion;
       if (Cars == 1)
@@ -24,7 +24,7 @@
      }
      function Interestelar()
      {
-      var condicion = prompt ("øTe gustaria ver la pelicula? (si/no) 1/2")
+      var condicion = prompt ("¬øTe gustaria ver la pelicula? (si/no) 1/2")
       var Inter;
       Inter = condicion * condicion;
       if (Inter == 1)
@@ -38,7 +38,7 @@
      }
      function Animales()
      {
-      var condicion = prompt ("øTe gustaria ver la pelicula? (si/no) 1/2")
+      var condicion = prompt ("¬øTe gustaria ver la pelicula? (si/no) 1/2")
       var Animales;
       Animales = condicion * condicion;
       if (Animales == 1)
@@ -52,7 +52,7 @@
      }
      function Shrek()
      {
-      var condicion = prompt ("øTe gustaria ver la pelicula? (si/no) 1/2")
+      var condicion = prompt ("¬øTe gustaria ver la pelicula? (si/no) 1/2")
       var Shrek;
       Shrek = condicion * condicion;
       if (Shrek == 1)
@@ -66,7 +66,7 @@
      }
      function Blade()
      {
-      var condicion = prompt ("øTe gustaria ver la pelicula? (si/no) 1/2")
+      var condicion = prompt ("¬øTe gustaria ver la pelicula? (si/no) 1/2")
       var Blade;
       Blade = condicion * condicion;
       if (Blade == 1)
@@ -80,7 +80,7 @@
      }
      function Turbo()
      {
-      var condicion = prompt ("øTe gustaria ver la pelicula? (si/no) 1/2")
+      var condicion = prompt ("¬øTe gustaria ver la pelicula? (si/no) 1/2")
       var Turbo;
       Turbo = condicion * condicion;
       if (Turbo == 1)
@@ -94,7 +94,7 @@
      }
      function Corazones()
      {
-      var condicion = prompt ("øTe gustaria ver la pelicula? (si/no) 1/2")
+      var condicion = prompt ("¬øTe gustaria ver la pelicula? (si/no) 1/2")
       var Corazones;
       Corazones = condicion * condicion;
       if (Corazones == 1)
@@ -108,7 +108,7 @@
      }
      function Lorax()
      {
-      var condicion = prompt ("øTe gustaria ver la pelicula? (si/no) 1/2")
+      var condicion = prompt ("¬øTe gustaria ver la pelicula? (si/no) 1/2")
       var Lorax;
       Lorax = condicion * condicion;
       if (Lorax == 1)
@@ -122,7 +122,7 @@
      }
      function Pitufos()
      {
-      var condicion = prompt ("øTe gustaria ver la pelicula? (si/no) 1/2")
+      var condicion = prompt ("¬øTe gustaria ver la pelicula? (si/no) 1/2")
       var Pitufos;
       Pitufos = condicion * condicion;
       if (Pitufos == 1)
@@ -136,7 +136,7 @@
      }
      function Vecinos()
      {
-      var condicion = prompt ("øTe gustaria ver la pelicula? (si/no) 1/2")
+      var condicion = prompt ("¬øTe gustaria ver la pelicula? (si/no) 1/2")
       var Vecinos;
       Vecinos = condicion * condicion;
       if (Vecinos == 1)
@@ -175,11 +175,11 @@
          <h2> Cars </h2>
          <h3> Sinopsis de la pelicula cars </h3>
          <p>
-          El aspirante a campeÛn de carreras Rayo McQueen parece que est· a punto de conseguir <br>
-          el Èxito, la fama y todo lo que habÌa soÒado, hasta que por error toma un desvÌo <br>
+          El aspirante a campe√≥n de carreras Rayo McQueen parece que est√° a punto de conseguir <br>
+          el √©xito, la fama y todo lo que hab√≠a so√±ado, hasta que por error toma un desv√≠o <br>
           inesperado en la polvorienta y solitaria Ruta 66. Su actitud arrogante se desvanece <br> 
-          cuando llega a una pequeÒa comunidad olvidada que le enseÒa las cosas importantes <br>
-          de la vida que habÌa olvidado. <br> 
+          cuando llega a una peque√±a comunidad olvidada que le ense√±a las cosas importantes <br>
+          de la vida que hab√≠a olvidado. <br> 
          <br>
          <button type="button" onclick="Cars()">Link de la pelicula</button>
          <br> 
@@ -190,10 +190,10 @@
          <br>
          <h2> Interestelar </h2>
          <h3> Sinopsis de la pelicula interestelar </h3>
-         Un grupo de cientÌficos y exploradores, encabezados por Cooper, se embarcan en un viaje <br>
+         Un grupo de cient√≠ficos y exploradores, encabezados por Cooper, se embarcan en un viaje <br>
          espacial para encontrar un lugar con las condiciones necesarias para reemplazar a la  <br>
-         Tierra y comenzar una nueva vida allÌ. La Tierra est· llegando a su fin y este grupo  <br>
-         necesita encontrar un planeta m·s all· de nuestra galaxia que garantice el futuro de <br>
+         Tierra y comenzar una nueva vida all√≠. La Tierra est√° llegando a su fin y este grupo  <br>
+         necesita encontrar un planeta m√°s all√° de nuestra galaxia que garantice el futuro de <br>
          la raza humana. <br>
          <br>
          <button type="button" onclick="Interestelar()">Link de la pelicula</button>
@@ -206,12 +206,12 @@
          <br>
          <h2> Animales nocturnos </h2>
          <h3> Sinopsis de la pelicula Animales nocturnos </h3>
-         Susan Morrow es una galerista afincada en Los ¡ngeles que comparte una vida llena de lujos, <br>
-         aunque vacÌa, con Hutton Morrow, su segundo marido. Un dÌa Susan recibe una novela escrita <br>
-         por su exmarido Edward Sheffield, del que lleva aÒos sin tener noticias. En una nota le pide <br>
-         que lea la novela inÈdita y que se ponga en contacto con Èl, pues se quedar· unos dÌas en la <br>
+         Susan Morrow es una galerista afincada en Los √Ångeles que comparte una vida llena de lujos, <br>
+         aunque vac√≠a, con Hutton Morrow, su segundo marido. Un d√≠a Susan recibe una novela escrita <br>
+         por su exmarido Edward Sheffield, del que lleva a√±os sin tener noticias. En una nota le pide <br>
+         que lea la novela in√©dita y que se ponga en contacto con √©l, pues se quedar√° unos d√≠as en la <br>
          ciudad. Es de noche. Susan, sola en la cama, empieza a leer, y es la historia de un matrimonio <br>
-         con una hija que conduciendo por Texas una noche son perseguidos por otro vehÌculo. <br>
+         con una hija que conduciendo por Texas una noche son perseguidos por otro veh√≠culo. <br>
          <br>
          <button type="button" onclick="Animales()">Link de la pelicula</button>
          <br>
@@ -223,10 +223,10 @@
          <br>
          <h2> Shrek </h2>
          <h3> Sinopsis de la pelicula Shrek </h3>
-         Hace mucho tiempo, en una lejana ciÈnaga, vivÌa un ogro llamado Shrek. Un dÌa, su preciada <br>
-         soledad se ve interrumpida por un montÛn de personajes de cuento de hadas que invaden su casa. <br>
+         Hace mucho tiempo, en una lejana ci√©naga, viv√≠a un ogro llamado Shrek. Un d√≠a, su preciada <br>
+         soledad se ve interrumpida por un mont√≥n de personajes de cuento de hadas que invaden su casa. <br>
          Todos fueron desterrados de su reino por el malvado Lord Farquaad. Decidido a devolverles su <br>
-         reino y recuperar la soledad de su ciÈnaga, Shrek llega a un acuerdo con Lord Farquaad y va a <br>
+         reino y recuperar la soledad de su ci√©naga, Shrek llega a un acuerdo con Lord Farquaad y va a <br>
          rescatar a la princesa Fiona, la futura esposa del rey. Sin embargo, la princesa esconde un <br>
          oscuro secreto. <br>
          <br>
@@ -240,11 +240,11 @@
          <br>
          <h2> Blade Runner 2049 </h2>
          <h3> Sinopsis de la pelicula Blade Runner 2049 </h3>
-         Tras la rebeliÛn de los replicantes creados por bioingenierÌa para ser utilizados como mano de <br>
-         obra esclava y la prohibiciÛn a Tyrell Corporation de seguir con su fabricaciÛn, el empresario <br>
-         Niander Wallace adquiriÛ lo que quedaba de Tyrell Corp. y creÛ una nueva lÌnea de replicantes <br>
-         mucho m·s obedientes. Ahora, en el aÒo 2049, los viejos modelos Nexus 8 que contin˙an con vida <br>
-         est·n siendo retirados. Los que les persiguen a˙n reciben el nombre de Blade Runner. <br>
+         Tras la rebeli√≥n de los replicantes creados por bioingenier√≠a para ser utilizados como mano de <br>
+         obra esclava y la prohibici√≥n a Tyrell Corporation de seguir con su fabricaci√≥n, el empresario <br>
+         Niander Wallace adquiri√≥ lo que quedaba de Tyrell Corp. y cre√≥ una nueva l√≠nea de replicantes <br>
+         mucho m√°s obedientes. Ahora, en el a√±o 2049, los viejos modelos Nexus 8 que contin√∫an con vida <br>
+         est√°n siendo retirados. Los que les persiguen a√∫n reciben el nombre de Blade Runner. <br>
          <br>
          <button type="button" onclick="Blade()">Link de la pelicula</button>
          <br>
@@ -257,9 +257,9 @@
          <br>
          <h2> Turbo </h2>
          <h3> Sinopsis de la pelicula Turbo </h3>
-         Turbo es un caracol de jardÌn con un sueÒo imposible: convertirse en el caracol m·s <br>
-         r·pido del mundo. Cuando un extraÒo accidente le da el poder de la s˙per velocidad, <br>
-         Turbo intentar· cumplir su sueÒo: ganar las 500 millas de Indian·polis. <br>
+         Turbo es un caracol de jard√≠n con un sue√±o imposible: convertirse en el caracol m√°s <br>
+         r√°pido del mundo. Cuando un extra√±o accidente le da el poder de la s√∫per velocidad, <br>
+         Turbo intentar√° cumplir su sue√±o: ganar las 500 millas de Indian√°polis. <br>
          <br>
          <button type="button" onclick="Turbo()">Link de la pelicula</button>
          <br>
@@ -271,13 +271,13 @@
          <br>
          <h2> Corazones de hierro </h2>
          <h3> Sinopsis de la pelicula Corazones de hierro </h3>
-         La historia que se adentra en los albores de la Segunda Guerra Mundial acompaÒando a una <br> 
-         tripulaciÛn compuesta por cinco valientes soldados de un frio tanque de acero estadounidense, <br>
-         cuyo objetivo es introducirse a travÈs de costas europeas. Uno de ellos ser· Brad Pitt, que <br>
-         tratar· de sobrevivir con sus camaradas a los ˙ltimos dÌas del conflicto bÈlico que sacudiÛ <br>
+         La historia que se adentra en los albores de la Segunda Guerra Mundial acompa√±ando a una <br> 
+         tripulaci√≥n compuesta por cinco valientes soldados de un frio tanque de acero estadounidense, <br>
+         cuyo objetivo es introducirse a trav√©s de costas europeas. Uno de ellos ser√° Brad Pitt, que <br>
+         tratar√° de sobrevivir con sus camaradas a los √∫ltimos d√≠as del conflicto b√©lico que sacudi√≥ <br>
          a toda Europa. Una carrera contrarreloj por mantener el puesto y salir vivos de aquel infierno, <br>
-         con el ˙nico consuelo de un final inminente. Su ˙nico apoyo ser· la confianza en el grupo de <br>
-         hombres que le acompaÒan, sin ellos sobrevivir podrÌa ser imposible. Drama bÈlico que ofrece <br>
+         con el √∫nico consuelo de un final inminente. Su √∫nico apoyo ser√° la confianza en el grupo de <br>
+         hombres que le acompa√±an, sin ellos sobrevivir podr√≠a ser imposible. Drama b√©lico que ofrece <br>
          un nuevo punto de vista sobre los sucesos que sobrecogieron el mundo entero en el siglo XX. <br>
          <br>
          <button type="button" onclick="Corazones()">Link de la pelicula</button>
@@ -290,11 +290,11 @@
          <br>
          <h2> Lorax </h2>
          <h3> Sinopsis de la pelicula Lorax </h3>
-         Ted, un niÒo de 12 aÒos, vive en un lugar pr·cticamente desprovisto de naturaleza; en Thneedville <br>
-         no hay flores, ni ·rboles. Ted quiere ganarse el corazÛn de Audrey, la chica de sus sueÒos, pero <br>
-         para hacer esto, debe descubrir lo que ella m·s desea: un ·rbol Tr˙fula. Para conseguirlo, Ted <br>
-         profundiza en la historia del Lorax, alguna vez el guardi·n malhumorado del bosque, y de Once-ler, <br>
-         que permitiÛ a su codicia superar el respeto por la naturaleza. <br>
+         Ted, un ni√±o de 12 a√±os, vive en un lugar pr√°cticamente desprovisto de naturaleza; en Thneedville <br>
+         no hay flores, ni √°rboles. Ted quiere ganarse el coraz√≥n de Audrey, la chica de sus sue√±os, pero <br>
+         para hacer esto, debe descubrir lo que ella m√°s desea: un √°rbol Tr√∫fula. Para conseguirlo, Ted <br>
+         profundiza en la historia del Lorax, alguna vez el guardi√°n malhumorado del bosque, y de Once-ler, <br>
+         que permiti√≥ a su codicia superar el respeto por la naturaleza. <br>
          <br>
          <button type="button" onclick="Lorax()">Link de la pelicula</button>
          <br>
@@ -307,12 +307,12 @@
          <br>
          <h2> La aldea de los pitufos </h2>
          <h3> Sinopsis de la pelicula La aldea de los pitufos </h3>
-         En la aldea de los pitufos, cada uno de sus habitantes tiene un propÛsito: Pitufo Panadero hace pan y <br>
-         pasteles, Pitufo Vanidoso se dedica a mirarse en el espejo, Pitufo GruÒÛn gruÒe constantemente y Pap· <br>
-         Pitufo se ocupa de dirigir. Pero Pitufina no parece tener un propÛsito claro, asÌ que decide salir a <br>
+         En la aldea de los pitufos, cada uno de sus habitantes tiene un prop√≥sito: Pitufo Panadero hace pan y <br>
+         pasteles, Pitufo Vanidoso se dedica a mirarse en el espejo, Pitufo Gru√±√≥n gru√±e constantemente y Pap√° <br>
+         Pitufo se ocupa de dirigir. Pero Pitufina no parece tener un prop√≥sito claro, as√≠ que decide salir a <br>
          descubrirlo. Cuando se adentra por primera vez en el Bosque Encantado, un territorio inexplorado y <br>
-         totalmente prohibido, ella y sus hermanos los pitufos FilÛsofo, Valiente y Torpe emprender·n un alocado <br>
-         viaje lleno de acciÛn, peligro y descubrimientos, que los conducir· al mayor misterio de la historia de <br>
+         totalmente prohibido, ella y sus hermanos los pitufos Fil√≥sofo, Valiente y Torpe emprender√°n un alocado <br>
+         viaje lleno de acci√≥n, peligro y descubrimientos, que los conducir√° al mayor misterio de la historia de <br>
          la Pitufa. <br>
          <br>
          <button type="button" onclick="Pitufos()">Link de la pelicula</button>
@@ -325,16 +325,16 @@
          <br>
          <h2> Vecinos invasores </h2>
          <h3> Sinopsis de la pelicula Vecinos invasores </h3>
-         Cuando Verne y sus amigos del bosque se despiertan de su hibernaciÛn, se encuentran con que tienen nuevos <br>
-         vecinos: humanos. R.J., un travieso mapache, aprovechar· la nueva situaciÛn para mostrar a los dem·s como <br>
-         beneficiarse el botÌn urbano que se acaba de poner a su alcance. <br>
+         Cuando Verne y sus amigos del bosque se despiertan de su hibernaci√≥n, se encuentran con que tienen nuevos <br>
+         vecinos: humanos. R.J., un travieso mapache, aprovechar√° la nueva situaci√≥n para mostrar a los dem√°s como <br>
+         beneficiarse el bot√≠n urbano que se acaba de poner a su alcance. <br>
          <br>
          <button type="button" onclick="Vecinos()">Link de la pelicula</button>
          <br>
          </p>
 
          <footer>
-    © <span>2022</span> Movie Review TODOS LOS DERECHOS RESERVADOS
+    ¬© <span>2022</span> Movie Review TODOS LOS DERECHOS RESERVADOS
     </footer>
 
       </body>
